--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Blind -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'Claire: The Blind Love of a Blind Hero, by a Blind Author'
 url: http://www.gutenberg.org/ebooks/30261
